[package]
name = "lava_torrent"
version = "0.8.1"
authors = ["ttlajus <40629580+ttlajus@users.noreply.github.com>"]
description = "A library for parsing/encoding bencode and .torrent files."
repository = "https://github.com/ttlajus/lava_torrent"
readme = "README.md"
keywords = ["bittorrent", "bencode"]
categories = ["parsing", "encoding"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "ttlajus/lava_torrent" }
codecov = { repository = "ttlajus/lava_torrent" }

[features]
default = []
parallel_single_file_hashing = ["rayon"]

[dependencies]
itertools = "0.10.3"
conv = "0.3.3"
sha-1 = "0.10.0"
thiserror = "1.0.30"
percent-encoding = "2.1.0"
rayon = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8.5"
