[package]
name = "lava_torrent"
version = "0.9.0"
authors = ["ttlajus <40629580+ttlajus@users.noreply.github.com>"]
description = "A library for parsing/encoding bencode and .torrent files."
repository = "https://github.com/ttlajus/lava_torrent"
readme = "README.md"
keywords = ["bittorrent", "bencode"]
categories = ["parsing", "encoding"]
license = "MIT OR Apache-2.0"

[features]
default = []
parallel_single_file_hashing = ["rayon"]

[dependencies]
itertools = "0.10"
conv = "0.3"
sha1 = "0.10"
thiserror = "1"
percent-encoding = "2"
rayon = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
