[package]
name = "lava_torrent"
version = "0.10.0"
authors = ["ttlajus <40629580+ttlajus@users.noreply.github.com>"]
description = "A library for parsing/encoding bencode and .torrent files."
repository = "https://github.com/ttlajus/lava_torrent"
readme = "README.md"
keywords = ["bittorrent", "bencode"]
categories = ["parsing", "encoding"]
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
itertools = "0.10"
conv = "0.3"
sha1 = "0.10"
thiserror = "1"
percent-encoding = "2"
rayon = "1"
num_cpus = "1"

[dev-dependencies]
rand = "0.8"
